# crossword-composer

./: Cargo.toml  build.sh
new-ui/: package.json  webpack.config.js
new-ui/public/: index.html
new-ui/src/: main.js  worker.js
src/: dictionary.rs  grid.rs  index.rs  lib.rs  par_solver.rs  solver.rs
ui/: package.json  rollup.config.js  serve.json  webpack.config.js
ui/public/: index.html
ui/src/: crossword.js  main.js  solver.js  status.js  worker.js
ui/src/parallel/: worker.js
