[package]
name = "crossword"
version = "0.1.0"
authors = ["Paul Butler <paulgb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
js-sys = "0.3.37"
console_error_panic_hook = "0.1.6"
wasm-bindgen-rayon = "1.0"
rayon = "1.5.1"

[dependencies.web-sys]
version = "0.3.37"
features = [
  'console'
]
